# mfsm

./: LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/mfsm/: __init__.py  fsm.py
tests/: test_turnstile.py  test_window_controller.py
