[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mfsm"
version = "0.0.1"
authors = [
  { name="Pedro FILLASTRE", email="pedrogas_g@hotmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pedrogasg/mfsm"
"Bug Tracker" = "https://github.com/pedrogasg/mfsm/issues"


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
  "src"
]